# mlflow-mlserver-docker

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
mlflow_mlserve_kubernetes/: __init__.py  main.py
mlflow_mlserver_docker/: Dockerfile  __init__.py  cli.py  main.py
tests/: test_main.py
